--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="goup" class="anchor" href="#goup"><span class="octicon octicon-link"></span></a>Goup</h1>
-
-<p>Goup is a small one-binary file server written in Go which also allows to upload
+          <p>Goup is a small one-binary file server written in Go which also allows to upload
 files. You can run it standalone or deploy it as FastCGI application.</p>
 
 <p><code>go get github.com/dAnjou/goup</code></p>
@@ -53,6 +50,7 @@ files. You can run it standalone or deploy it as FastCGI application.</p>
   -mode="http": run either standalone (http) or as FCGI application (fcgi)
   -noupload=false: enable or disable uploads
   -v=false: verbose output (no output at all by default)
+  -version=false: show version and exit
 
 Environment variables (get overridden by command line arguments):
   GOUP_UPLOAD=false: disable uploads
