Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ files. You can run it standalone or deploy it as FastCGI application.</p>
 <pre><code>Usage of goup:
   -addr="0.0.0.0:4000": listen on this address
   -dir=".": directory for storing and serving files
+  -index="": serve this file if it exists in the current directory instead of a listing
   -mode="http": run either standalone (http) or as FCGI application (fcgi)
   -noupload=false: enable or disable uploads
   -v=false: verbose output (no output at all by default)
@@ -56,6 +57,7 @@ Environment variables (get overridden by command line arguments):
   GOUP_UPLOAD=false: disable uploads
   GOUP_DIR=&lt;path&gt;: see -dir
   GOUP_MODE=(http|fcgi): see -mode
+  GOUP_INDEX=&lt;filename&gt;: see -index
 </code></pre>
         </section>
 
